hphp/test/slow/lang/invariant_cb_two.php.expectf
Fatal error: Uncaught exception 'HH\InvariantException' with message 'Callback already registered: a' in %s/test/slow/lang/invariant_cb_two.php:5
Stack trace:
#0 %s/test/slow/lang/invariant_cb_two.php(5): HH\invariant_callback_register()
#1 {main}
